@@ -420,7 +420,7 @@ Perl module to generate random data
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/Random-Day>
+L<https://github.com/michal-josef-spacek/Random-Day>
 
 =head1 AUTHOR
 
