@@ -32,7 +32,7 @@ requires:
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Random-Day
-  homepage: https://github.com/tupinek/Random-Day
+  homepage: https://github.com/michal-josef-spacek/Random-Day
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Random-Day
+  repository: git://github.com/michal-josef-spacek/Random-Day
 version: '0.09'
