@@ -160,7 +160,7 @@ SEE ALSO
         Perl module to generate random data
 
 REPOSITORY
-    <https://github.com/tupinek/Random-Day>
+    <https://github.com/michal-josef-spacek/Random-Day>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
