@@ -2,6 +2,7 @@
  - Change =item to =head2 in METHODS section in doc.
  - Update Module::Install to 1.19 version.
  - Update copyright years.
+ - Update my github user name.
 
 0.08 2018-10-11T16:53:50+02:00
  - Code optimalization - to simple quotes.
